# botmaro-gcp-secret-manager

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  secrets.example.yml
.github/workflows/: auto-release.yml  publish-pypi.yml  tests.yml
secrets_manager/: __init__.py  cli.py  config.py  core.py  validator.py
