[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botmaro-secrets-manager"
version = "0.5.3"
description = "A standalone secret management tool for multi-environment deployments with Google Secret Manager"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Botmaro Team"}
]
keywords = ["secrets", "gsm", "google-secret-manager", "environment", "deployment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "google-cloud-secret-manager>=2.16.0",
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "urllib3>=2.6.3",
    "protobuf>=6.33.5",
    "pyasn1>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=25.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
secrets-manager = "secrets_manager.cli:app"

[project.urls]
Homepage = "https://github.com/pawpeer/botmaro-gcp-secret-manager"
Repository = "https://github.com/pawpeer/botmaro-gcp-secret-manager"
Issues = "https://github.com/pawpeer/botmaro-gcp-secret-manager/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["secrets_manager*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true